crates/cherry-pit-core/tests/compile_fail/correlation_context_no_default.stderr
error[E0599]: no associated function or constant named `default` found for struct `CorrelationContext` in the current scope
 --> tests/compile_fail/correlation_context_no_default.rs:7:36
  |
7 |     let _ctx = CorrelationContext::default();
  |                                    ^^^^^^^ associated function or constant not found in `CorrelationContext`
  |
note: if you're trying to build a new `CorrelationContext` consider using one of the following associated functions:
      CorrelationContext::none
      CorrelationContext::new
      CorrelationContext::correlated
 --> src/correlation.rs
  |
  |     pub fn none() -> Self {
  |     ^^^^^^^^^^^^^^^^^^^^^
...
  |     pub fn new(correlation_id: uuid::Uuid, causation_id: uuid::Uuid) -> Self {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
  |     pub fn correlated(correlation_id: uuid::Uuid) -> Self {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
